--- a/front/index.html
+++ b/front/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="./src/assets/Icono_AltaCocina.jpeg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>AltaCocina</title>
   </head>
   <body>
     <div id="root"></div>
